--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "vueserve": "vue-cli-service serve",
+    "vuebuild": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "build": "webpack",
+    "serve": "webpack-dev-server"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -20,14 +22,23 @@
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
     "babel-eslint": "^10.0.1",
+    "css-loader": "^3.2.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.11.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
     "postcss-px2rem": "^0.3.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
+    "url-loader": "^2.1.0",
     "vconsole": "^3.3.0",
+    "vue-loader": "^15.7.1",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.21",
-    "webpack-chain": "^5.2.3"
+    "webpack": "^4.40.2",
+    "webpack-chain": "^5.2.3",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   },
   "eslintConfig": {
     "root": true,
