--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
+    "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.1",
     "css-loader": "^3.2.0",
     "eslint": "^5.8.0",
