--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-service": "^3.5.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
